02-06-20 basic changes in the UI
● The background colour of splash sceen changed

● The logo made uniform

● The sentence case maintained in text

● size of Logo and the page header changed

● Colour combination changed

●some changes on specific pages like

background of Event registeration,

buttons,

clipart change on home page

indentation of AUMP Clubs

--- a/app/src/main/res/layout/activity_upcoming_events.xml
+++ b/app/src/main/res/layout/activity_upcoming_events.xml
@@ -12,7 +12,6 @@
         android:id="@+id/toolbar"
         />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -59,12 +58,19 @@
 
         />
 
-    <CalendarView
-        android:id="@+id/calander"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="208dp"
+        android:fillViewport="false">
+
+        <CalendarView
+            android:id="@+id/calander"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp" />
+    </ScrollView>
 
     <ScrollView
         android:layout_width="match_parent"
