--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#000080</color>
     <color name="colorBack">#E8D109</color>
+    <color name="white">#FFFFFF	</color>
     <color name="black">#09090A</color>
     <color name="darkyellow">#CCCC00</color>
     <color name="navyblue">#000080</color>
