--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".club_activity"
     android:orientation="vertical">
 
@@ -27,7 +28,7 @@
         <ImageView
             android:layout_width="108dp"
             android:layout_height="match_parent"
-            android:src="@drawable/amity_logo"
+            android:src="@drawable/official_logo"
             android:contentDescription="@string/amity_logo" />
 
         <TextView
@@ -64,66 +65,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="30dp"
         app:cardCornerRadius="3dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="30dp"
         app:cardBackgroundColor="@color/wafer">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
                 tools:ignore="UselessParent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/title1"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="@string/acc"
-                        android:textColor="@color/navyblue"
-                        android:textSize="25sp"
                         android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:gravity="center_horizontal" />
+                        android:textColor="@color/navyblue"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/club_img"
                         android:layout_width="90dp"
                         android:layout_height="80dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="-4dp"
-                        android:src="@drawable/club"
-                        android:layout_marginStart="190dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_marginStart="250dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
                         android:contentDescription="@string/todo"
-                        android:layout_marginRight="5dp" />
+                        android:src="@drawable/club" />
 
                     <TextView
                         android:id="@+id/des1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:textAlignment="center"
+                        android:layout_width="239dp"
+                        android:layout_height="69dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_marginTop="-90dp"
-                        android:layout_marginRight="100dp"
-                        android:text="@string/upgrade_your_technical_skills"
-                        android:textSize="20sp"
-                        android:textStyle="normal"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="100dp"
+                        android:layout_marginRight="5dp"
                         android:gravity="center_horizontal"
-                        android:layout_marginEnd="100dp" />
+                        android:text="@string/upgrade_your_technical_skills"
+                        android:textAlignment="center"
+                        android:textSize="20sp"
+                        android:textStyle="normal" />
 
 
                 </LinearLayout>
@@ -165,14 +163,14 @@
 
                     <TextView
                         android:id="@+id/title2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="249dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:text="@string/eco_club"
                         android:textAlignment="center"
                         android:textColor="@color/navyblue"
                         android:textSize="30sp"
-                        android:textStyle="bold"
-                        android:gravity="center_horizontal" />
+                        android:textStyle="bold" />
 
                     <ImageView
                         android:id="@+id/eco_club2"
@@ -212,8 +210,8 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="375dp"
-        android:layout_height="137dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginRight="30dp"
@@ -238,8 +236,8 @@
 
                     <TextView
                         android:id="@+id/title3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="257dp"
+                        android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
                         android:text="@string/literature_club"
                         android:textAlignment="center"
@@ -252,25 +250,26 @@
                         android:layout_width="90dp"
                         android:layout_height="80dp"
                         android:layout_marginStart="250dp"
-                        android:layout_marginLeft="250dp"
-                        android:layout_marginTop="-1dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
                         android:contentDescription="@string/todo"
                         android:src="@drawable/parikalp" />
 
+
                     <TextView
                         android:id="@+id/des3"
-                        android:layout_width="227dp"
-                        android:layout_height="40dp"
+                        android:layout_width="232dp"
+                        android:layout_height="86dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginTop="-70dp"
+                        android:layout_marginTop="-90dp"
                         android:layout_marginEnd="100dp"
-                        android:layout_marginRight="100dp"
                         android:gravity="center_horizontal"
                         android:text="@string/enhance_explore_and_express_the_love_for_literature"
                         android:textAlignment="center"
                         android:textSize="20sp"
-                        android:textStyle="normal" />
+                        android:textStyle="normal"
+                        android:layout_marginRight="70dp" />
 
 
                 </LinearLayout>
