--- a/app/src/main/res/layout/activity_eforms_main.xml
+++ b/app/src/main/res/layout/activity_eforms_main.xml
@@ -62,7 +62,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EDA9A9"
+
         >
 
         <LinearLayout
@@ -78,7 +78,7 @@
                 android:text="@string/coding_competition"
 
 
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="25sp"
                 android:textStyle="normal" />
 
@@ -110,19 +110,15 @@
 
                 android:textSize="20sp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#E9379D9F"
-                android:shadowColor="#E9379D9F"
-                android:text="@string/go_for_registration" />
-            <TextView
+
+
+                <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:padding="5dp"
                 android:text="@string/android_development_webinar"
-                android:textColor="#ffffff"
+                android:textColor="#000000"
                 android:textSize="25sp"
                 android:textStyle="normal" />
 
@@ -153,14 +149,17 @@
                 android:padding="5dp"
                 android:text="@string/date_24_may_2020"
                 android:textSize="20sp"/>
+
             <Button
-                android:layout_width="match_parent"
+                android:id="@+id/oval"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="#E9379D9F"
-                android:shadowColor="#E9379D9F"
-                android:text="@string/go_for_registration" />
+                android:layout_gravity="center"
+                android:background="@drawable/oval"
+                android:text="@string/register_button"
+                android:textColor="#ffffff">
 
-
+            </Button>
 
 
         </LinearLayout>
