--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -101,7 +101,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_margin="16dp"
                         android:orientation="vertical"
@@ -113,7 +113,7 @@
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/quick_links"
+                            android:src="@drawable/quicklinks"
                             android:contentDescription="@string/quick_link" />
 
                         <TextView
@@ -272,7 +272,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_margin="16dp"
                         android:orientation="vertical"
@@ -283,8 +283,8 @@
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/gallery"
-                            android:contentDescription="@string/gallery" />
+                            android:contentDescription="@string/gallery"
+                            android:src="@drawable/photogallery" />
 
                         <TextView
                             android:layout_width="wrap_content"
