--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -4,29 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBack"
+    android:layout_centerInParent="true"
+    android:background="@color/white"
     tools:context=".SplashMain">
 
     <ImageView
         android:id="@+id/official_logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="5dp"
-        android:layout_margin="10dp"
-        android:src="@drawable/official_logo"
-        android:contentDescription="@string/amity_logo" />
+        android:layout_height="457dp"
+        android:contentDescription="@string/amity_logo"
+        android:paddingTop="200dp"
+        android:src="@drawable/official_logo" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_to_amiverse"
         android:layout_below="@+id/official_logo"
-        android:textColor="#1212F3"
-        android:textSize="25sp"
+        android:layout_marginTop="64dp"
         android:gravity="center"
-
-        />
+        android:text="@string/welcome_to_amiverse"
+        android:textColor="@color/navyblue"
+        android:textSize="25sp" />
 </RelativeLayout>
