--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,9 +51,9 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="42dp"
                 android:background="@drawable/bgedittext"
-                android:hint="@string/Email"
+                android:hint="@string/email"
                 android:ems="10"
-                android:autofillHints="@string/Email"
+                android:autofillHints="@string/email"
                  />
 
             </com.google.android.material.textfield.TextInputLayout>
