--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="darkyellow">#CCCC00</color>
     <color name="navyblue">#000080</color>
     <color name="wafer">#abb9ff </color>
+    <color name="icepack"> #c7ecee</color>
 </resources>
