--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -193,11 +193,11 @@
 
                         <ImageView
                             android:id="@+id/h_eforms"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
+                            android:layout_width="91dp"
+                            android:layout_height="76dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/eforms"
-                            android:contentDescription="@string/e_forms" />
+                            android:contentDescription="@string/e_forms"
+                            android:src="@drawable/eforms" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -234,11 +234,11 @@
 
                         <ImageView
                             android:id="@+id/h_clubs"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
+                            android:layout_width="97dp"
+                            android:layout_height="77dp"
                             android:layout_gravity="center_horizontal"
-                            android:src="@drawable/clubs"
-                            android:contentDescription="@string/aump_clubs" />
+                            android:contentDescription="@string/aump_clubs"
+                            android:src="@drawable/clubs" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -368,7 +368,47 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="360 Campus Tour"
+                            android:text="@string/Campustour"
+                            android:textColor="@android:color/black"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp"
+                    tools:targetApi="lollipop">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="120dp"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_margin="16dp"
+                        android:orientation="vertical"
+                        tools:ignore="UseCompoundDrawables">
+
+                        <ImageView
+                            android:id="@+id/h_scorecard"
+                            android:layout_width="94dp"
+                            android:layout_height="94dp"
+                            android:layout_gravity="center_horizontal"
+                            android:contentDescription="@string/Scorecard"
+                            android:src="@drawable/gold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/Scorecard"
                             android:textColor="@android:color/black"
                             android:textSize="15sp"
                             android:textStyle="bold" />
