--- a/app/src/main/res/layout/campustour.xml
+++ b/app/src/main/res/layout/campustour.xml
@@ -82,7 +82,8 @@
                     android:textColor="@android:color/white"
                     android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:ignore="HardcodedText" />
 
             </RelativeLayout>
 
