--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -90,7 +90,8 @@
             android:text="@string/ABS"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -106,7 +107,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv1"
                 android:maxLength="2"
                 android:layout_marginRight="15dp"
                 android:gravity="center_horizontal" />
@@ -118,7 +119,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv2"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -129,7 +130,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv3"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -142,7 +143,7 @@
             android:layout_gravity="center"
             android:padding="20dp"
             android:text=""
-
+            android:id="@+id/tv4"
             android:maxLength="3"
 
             android:textColor="@color/colorPrimaryDark"
@@ -180,7 +181,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv5"
                 android:maxLength="2"
                 android:gravity="center_horizontal"
                 android:layout_marginRight="15dp" />
@@ -192,7 +193,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv6"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -203,7 +204,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv7"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -217,7 +218,7 @@
             android:layout_gravity="center"
             android:padding="20dp"
 
-
+            android:id="@+id/tv8"
             android:maxLength="3"
 
             android:textColor="@color/colorPrimaryDark"
@@ -256,7 +257,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
 
-
+                android:id="@+id/tv9"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -267,7 +268,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv10"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -278,7 +279,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv11"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -291,7 +292,7 @@
             android:layout_gravity="center"
             android:padding="20dp"
             android:text=""
-
+            android:id="@+id/tv12"
             android:maxLength="3"
             android:textColor="@color/colorPrimaryDark"
 
@@ -329,7 +330,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv13"
                 android:maxLength="2"
                 android:gravity="center_horizontal"
                 android:layout_marginRight="15dp" />
@@ -341,7 +342,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv14"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -352,7 +353,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv15"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -365,7 +366,7 @@
             android:layout_marginBottom="1dp"
 
             android:padding="20dp"
-
+            android:id="@+id/tv16"
 
             android:maxLength="3"
 
@@ -407,7 +408,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv17"
                 android:maxLength="2"
                 android:layout_marginRight="15dp"
                 android:gravity="center_horizontal" />
@@ -419,7 +420,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv18"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -430,7 +431,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv19"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -443,7 +444,7 @@
             android:layout_gravity="center"
             android:padding="20dp"
             android:text=""
-
+            android:id="@+id/tv20"
             android:maxLength="3"
 
             android:textColor="@color/colorPrimaryDark"
@@ -479,7 +480,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv21"
                 android:maxLength="2"
                 android:gravity="center_horizontal"
                 android:layout_marginRight="15dp" />
@@ -491,7 +492,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv22"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -502,7 +503,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv23"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -513,7 +514,7 @@
             android:layout_marginBottom="1dp"
             android:layout_gravity="center"
             android:padding="20dp"
-
+            android:id="@+id/tv24"
             android:maxLength="3"
             android:textColor="@color/colorPrimaryDark"
             android:text=""
@@ -550,7 +551,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
-
+                android:id="@+id/tv25"
                 android:maxLength="2"
                 android:gravity="center_horizontal"
                 android:layout_marginRight="15dp" />
@@ -562,7 +563,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv26"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
 
@@ -573,7 +574,7 @@
                 android:text=""
                 android:textSize="20sp"
                 android:textStyle="bold"
-
+                android:id="@+id/tv27"
                 android:maxLength="2"
                 android:layout_marginRight="15dp" />
         </LinearLayout>
@@ -586,6 +587,7 @@
             android:padding="20dp"
             android:text=""
             android:maxLength="3"
+            android:id="@+id/tv28"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
     </TableRow>
